--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/pekka.png" alt="pekka profiilikuva"></td>
+            <td><img src="Images/pekka.png" alt="pekka profiilikuva"></td>
             <td>
                 <h1>Pekka Timonen</h1>
                 <p><em>Tuotepäällikkö @ <a href="https://www.avs-yhtiot.fi/">AVS-yhtiöt</a></em></p>
